--- a/runningtips.html
+++ b/runningtips.html
@@ -32,7 +32,7 @@
 
   <nav>
     <img src="actuallogo.svg" alt="Runner Logo">
-    <a href="itec365homepage.html">RUNNER'S HIGH-LIGHTS</a>
+    <a href="index.html">RUNNER'S HIGH-LIGHTS</a>
     <a href="running-tips.html" class="active">Running Tips</a>
     <a href="#">Gear Recommendations</a>
     <a href="#">Racing Plans</a>
