--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
   <nav>
     <img src="actuallogo.svg" alt="Runner Logo">
-    <a href="itec365homepage.html" class="active">RUNNER'S HIGH-LIGHTS</a>
+    <a href="index.html" class="active">RUNNER'S HIGH-LIGHTS</a>
     <a href="runningtips.html">Running Tips</a>
-    <a href="#">Gear Recommendations</a>
+    <a href="gear-recommendations.html">Gear Recommendations</a>
     <a href="#">Racing Plans</a>
     <a href="#">Feedback Forms</a>
   </nav>
