--- a/runningtips.html
+++ b/runningtips.html
@@ -34,7 +34,7 @@
     <img src="actuallogo.svg" alt="Runner Logo">
     <a href="index.html">RUNNER'S HIGH-LIGHTS</a>
     <a href="running-tips.html" class="active">Running Tips</a>
-    <a href="#">Gear Recommendations</a>
+    <a href="gear-recommendations.html">Gear Recommendations</a>
     <a href="#">Racing Plans</a>
     <a href="#">Feedback Forms</a>
   </nav>
