--- a/gear-recommendations.html
+++ b/gear-recommendations.html
@@ -33,7 +33,7 @@ gear-recommendations
   </header>
 
   <nav>
-    <img src="runner-logo.png" alt="Runner Logo">
+    <img src="actuallogo.svg" alt="Runner Logo">
     <a href="index.html">Home Page</a>
     <a href="index.html">RUNNER'S HIGH-LIGHTS</a>
     <a href="runningtips.html">Running Tips</a>
