--- a/gear-recommendations.html
+++ b/gear-recommendations.html
@@ -28,7 +28,7 @@
 <body>
 
   <header>
-    <h1 style="font-style: italic;">Gear Recommendations Page</h1>
+    <h1 id="main-title" style="font-style: italic;">Gear Recommendations Page</h1>
   </header>
 
   <nav>
