--- a/gear-recommendations.html
+++ b/gear-recommendations.html
@@ -1,3 +1,4 @@
+gear-recommendations
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,11 +29,11 @@
 <body>
 
   <header>
-    <h1 id="main-title" style="font-style: italic;">Gear Recommendations Page</h1>
+    <h1 id="main-title" style="font-style: italic;">Gear Recommendations</h1>
   </header>
 
   <nav>
-    <img src="actuallogo.svg" alt="Runner Logo">
+    <img src="runner-logo.png" alt="Runner Logo">
     <a href="index.html">Home Page</a>
     <a href="index.html">RUNNER'S HIGH-LIGHTS</a>
     <a href="runningtips.html">Running Tips</a>
