--- a/gear-recommendations.html
+++ b/gear-recommendations.html
@@ -29,7 +29,7 @@ gear-recommendations
 <body>
 
   <header>
-    <h1 id="main-title" style="font-style: italic;">Gear Recommendations</h1>
+    <h1 id="main-title" style="font-style: italic; text-align: center;">Gear Recommendations</h1>
   </header>
 
   <nav>
