--- a/runningtips.html
+++ b/runningtips.html
@@ -33,7 +33,7 @@
   <nav>
     <img src="actuallogo.svg" alt="Runner Logo">
     <a href="index.html">RUNNER'S HIGH-LIGHTS</a>
-    <a href="runningtips.html" class="active">Running Tips</a>
+    <a href="running-tips.html" class="active">Running Tips</a>
     <a href="gear-recommendations.html">Gear Recommendations</a>
     <a href="#">Racing Plans</a>
     <a href="#">Feedback Forms</a>
